--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#9B2818</color>
+    <color name="colorPrimaryDark">#661A10</color>
+    <!--    <color name="colorAccent">#188B9B</color>-->
+    <color name="colorAccent">#995500</color>
 </resources>
