Adds swipe to delete monsters on the library screen.

--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#9B2818</color>
     <color name="colorPrimaryDark">#661A10</color>
-    <color name="colorAccent">#188B9B</color>
+    <!--    <color name="colorAccent">#188B9B</color>-->
+    <color name="colorAccent">#995500</color>
 </resources>
