--- a/Android/app/src/main/res/layout/fragment_search.xml
+++ b/Android/app/src/main/res/layout/fragment_search.xml
@@ -7,15 +7,6 @@
     tools:context=".ui.search.SearchFragment"
     tools:targetApi="o">
 
-    <Button
-        android:id="@+id/button_search"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/action_search"
-        app:layout_constraintBaseline_toBaselineOf="@+id/search_query"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <EditText
         android:id="@+id/search_query"
         android:layout_width="0dp"
@@ -23,11 +14,27 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:importantForAutofill="no"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="@string/label_search_query"
-        app:layout_constraintEnd_toStartOf="@+id/button_search"
+        android:importantForAutofill="no"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/monster_list"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/search_query"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".SearchResultsFragment"
+        tools:listitem="@layout/monster_list_content" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
