Fixes a bunch of lint errors and enables Flipper navigation logging.

--- a/Android/app/src/main/res/layout/fragment_library.xml
+++ b/Android/app/src/main/res/layout/fragment_library.xml
@@ -6,17 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.library.LibraryFragment">
 
-    <TextView
-        android:id="@+id/text_library"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/monster_list"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".MonsterListFragment"
+        tools:listitem="@layout/monster_list_content" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/action_add_monster"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
